--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -47,10 +47,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r HEALTH_INFO_SYSTEM/requirements.txt
+        pip install -r health_info_system/requirements.txt
 
     - name: Run Django tests
-      working-directory: HEALTH_INFO_SYSTEM
+      working-directory: health_info_system
       run: |
         python manage.py migrate
         python manage.py test
+        
