--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r health_info_system/requirements.txt
+        pip install -r requirements.txt
 
     - name: Run Django tests
       working-directory: health_info_system
