--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -46,17 +46,17 @@ jobs:
 
     - name: Install dependencies
       run: |
-          cd health_info_system  # Enter the project folder
+          health_info_system  # Enter the project folder
           pip install -r requirements.txt
 
     - name: Run migrations
       run: |
-          cd health_info_system  # Enter the project folder
+          health_info_system  # Enter the project folder
           python manage.py migrate
 
     - name: Run tests
       run: |
-          cd health_info_system  # Enter the project folder
+          health_info_system  # Enter the project folder
           python manage.py test
-          
+
         
