--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -14,9 +14,9 @@ jobs:
       postgres:
         image: postgres:13
         env:
-          POSTGRES_DB: test_db
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_pass
+            POSTGRES_DB: health_db
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: password
         ports:
           - 5432:5432
         options: >-
