--- a/health-info-frontend/package.json
+++ b/health-info-frontend/package.json
@@ -8,17 +8,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "jest": "^27.4.5",
-    "ts-jest": "^27.0.7"
+    "webpack-dev-server": "^4.6.0"
   }
 }
